--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <meta property="og:title" content="Tracker + Doxing Tools">
     <meta property="og:description" content="Username: XYCoolcraft   || Password: XAYZCOLD">
-    <meta property="og:image" content="https://files.catbox.moe/evujjc.jpg">
+    <meta property="og:image" content="https://raw.githubusercontent.com/Xayztech/Doxing-Template-tracker/refs/heads/main/icon.png">
     <meta property="og:url" content="https://trackertools.vercel.app">
     <meta property="og:type" content="website">
     
